--- a/_posts/2024-10-02-1.md
+++ b/_posts/2024-10-02-1.md
@@ -7,10 +7,12 @@ author: "TH911"
 header-img: "img/bg/4.jpeg"
 header-mask: 0.4
 tags:
+  - 前缀和
+  - 差分
+  - 树状数组
   - 普及+/提高
 words:
   - 守墓人
-  - 树状数组
   - 区间查询
   - 区间修改
 ---
