--- a/_posts/2024-10-12-1.md
+++ b/_posts/2024-10-12-1.md
@@ -101,7 +101,7 @@ translate-pa.googleapis.com
 
 以 `www.baidu.com` 为例，翻译出来长这样（中译英）：
 
-![](/iimg/2024/10/004.png)
+![](/img/2024/10/004.png)
 
 遗憾的是，目前并不能完全修复此功能~~（虽然也没什么大用？）~~，因为其原理是访问[www-baidu-com.translate.goog](https://www-baidu-com.translate.goog)。也就是说，除非你闲到给所有站都映射上对应IP，不然没用。
 
