--- a/_posts/2024-10-13-1.md
+++ b/_posts/2024-10-13-1.md
@@ -108,7 +108,7 @@ int main(){
 
 考虑到 $mn$ 最大为 $(3 \times 10^5) \times (3 \times 10^5) = 6 \times 10^{10}$，显然~~又双叒叕~~**具有超时的风险**。~~（这个超时代码就不贴了）~~
 
-如果我们使用一个 $$cnt1_i$$ 记录 $$i$$ 号位置是否为 $$1$$，那么显然 $$pl=cnt1_{l_i}+cnt1_{l_i+1}+cnt1_{l_i+2} + \cdots + cnt1_{r_i}$$。
+如果我们使用一个 $$cnt1_i$$ 记录 $$i$$ 号位置是否为 $$1$$，那么显然答案 $$pl=\sum\limits_{j=l_i}^{r_i}cnt1_j$$。
 
 仔细看看，不难发现，这就是**快速**求 $$cnt1_{l_i}$$ 至 $$cnt1_{r_i}$$ 的和。那么我们**更改 $cnt1$ 的定义**，使 $$cnt1_i$$ 为 $$1$$ 至 $$i$$ 号位里 $1$ 的总数，则 $$pl=cnt1_{r_i}-cnt1_{l_{i-1}}$$。
 
