--- a/_posts/2024-10-20-1.md
+++ b/_posts/2024-10-20-1.md
@@ -29,6 +29,7 @@ words:
 
 2024.10.26更新：$\KaTeX$ 行内公式渲染问题已解决，可直接使用多行公式渲染。
 
-附：之前的错误渲染截图。
-
-![](/img/2024/10/025.png)
+<details class="info">
+    <summary>附：之前的错误渲染截图</summary>
+	<img src="/img/2024/10/025.png">
+</details>
