--- a/_posts/2024-10-23-3.md
+++ b/_posts/2024-10-23-3.md
@@ -55,10 +55,12 @@ words:
 
 ## 两种方案
 
-$$
-\LARGE\color{yellow}\colorbox{red}{warning:扫描线扫过的是值域}
-$$
-
+<details class="warning" open>
+    <summary style="color:red;">警告</summary>
+    <p style="color:red;">
+        <b>扫描线扫过的是值域</b>。
+    </p>
+</details>
 ### 值域（离散化）
 
 #### 操作
