--- a/_posts/2024-11-14-2.md
+++ b/_posts/2024-11-14-2.md
@@ -49,15 +49,16 @@ words:
 
 最后按照顺序输出即可。
 
-<details>
+<details class="question">
     <summary>
-        <span style="color: blue;">为什么可以使用图？（点击展开）</span>
+        为什么可以使用图
     </summary>
     <p>
     	这其实就涉及到图的本质了。
         图本质就是多对多元素间的关系，所以不要被局限了。
     </p>
 </details>
+
 
 ### 输出
 
@@ -82,7 +83,7 @@ for(int i=0;i<ans.size();i++)cout<<ans[i]<<endl;
 
 ### 时间复杂度
 
-没什么好说的：$\mathcal O\left(n\log_2n\right)$。
+没什么好说的：$\mathcal O\left(n\log n\right)$。
 
 ## AC代码
 
