--- a/_posts/2024-11-15-2.md
+++ b/_posts/2024-11-15-2.md
@@ -154,16 +154,14 @@ void dfs2(int x,int topx){
 
 那么，我们就可以使用线段树或是树状数组。
 
-<details>
-    <summary>
-        <div style="color: blue;">
-        	什么时候能够使用树状数组？（点击展开）
-        </div>
-    </summary>
-    树状数组能够实现的功能线段树都能够实现。<br>
-    但是树状数组常数更小且更好写。<br>
-    一般来讲，使用树状数组当且仅当能够进行“区间减法”，比如维护区间和，二者都可以：线段树直接查询 $[l,r]$，而树状数组用 $[1,r]$ 减去了 $[1,l-1]$。而维护区间最大值就不能够使用树状数组，因为最大值不能够进行“区间减法”。<br>
-    对于树链剖分，你如果真的想使用树状数组也可以。参见洛谷P2357，树链剖分需要线段树进行区间修改和区间查询，而树状数组要么单点修改区间查询，要么区间修改单点查询（维护差分数组），因此可以考虑像P2357一样维护两个树状数组。<br>
+<details class="note" open>
+    <summary>什么时候能够使用树状数组</summary>
+    <p>
+    树状数组能够实现的功能线段树都能够实现。
+    但是树状数组常数更小且更好写。
+    一般来讲，使用树状数组当且仅当能够进行“区间减法”，比如维护区间和，二者都可以：线段树直接查询 $[l,r]$，而树状数组用 $[1,r]$ 减去了 $[1,l-1]$。而维护区间最大值就不能够使用树状数组，因为最大值不能够进行“区间减法”。
+    对于树链剖分，你如果真的想使用树状数组也可以。参见洛谷P2357，树链剖分需要线段树进行区间修改和区间查询，而树状数组要么单点修改区间查询，要么区间修改单点查询（维护差分数组），因此可以考虑像P2357一样维护两个树状数组。
+    </p>
 </details>
 
 本文使用线段树实现。
