--- a/_posts/2024-11-19-6.md
+++ b/_posts/2024-11-19-6.md
@@ -67,7 +67,7 @@ tags:
 
 ## 控制台个性化
 
-![](/img/2024/11/021/png)
+![](/img/2024/11/021.png)
 
 原版的控制台不是很好看。选择右上角的 $\equiv$ 按钮，选择 Preferences，你就可以个性化了。推荐选择最下面的 Unnamed，把 Curser shape 改成 I-Beam。
 
