--- a/_posts/2024-12-14-6.md
+++ b/_posts/2024-12-14-6.md
@@ -250,7 +250,11 @@ int main(){
 
 ## AC 代码
 
-<div style="font-weight:bolder;text-align:center;color:red;font-size:30px">警告：请不要把位运算符 <code>|</code> 写为逻辑运算符 <code>||</code></div>
+<details class="warning" open>
+    <summary style="color:red;">警告</summary>
+    
+    <div style="font-weight:bolder;text-align:center;color:red;font-size:30px">警告：请不要把位运算符 <code>|</code> 写为逻辑运算符 <code>||</code></div>
+</details>
 
 ```cpp
 //#include<bits/stdc++.h>
