--- a/_posts/2024-12-14-9.md
+++ b/_posts/2024-12-14-9.md
@@ -9,7 +9,9 @@ header-mask: 0.4
 tags:
   - 题解
   - 树状数组
+  - 时间戳优化
 words:
+  - 多测清空
 ---
 
 > 题目传送门：[树状数组 1](https://www.luogu.com.cn/problem/P3374)、[树状数组 2](https://www.luogu.com.cn/problem/P3368) 、[守墓人](https://www.luogu.com.cn/problem/P2357)
@@ -66,23 +68,19 @@ words:
 
 在树状数组中，$\operatorname{lowbit}(x)$ 为 $x$ 的二进制最低位的 $1$ 的位权，数值上为 `x&-x`。
 
-比如说，$x=5$，$x$ 的二进制为 $100_{(2)}$，则 $\operatorname{lowbit}(x)=2^2=4$。
+比如说，$x=5$，$x$ 的二进制为 $$100_{(2)}$$，则 $\operatorname{lowbit}(x)=2^2=4$。
 
-而 `x&-x` 的原理也很简单。首先你要知道在计算机中，数字以**补码**的形式存储。
-
-（此处的二进制数有效位数只有 $4$ 位，最高位为符号位）
-
-那么对于正数（树状数组中 $\operatorname{lowbit}(x)$ 只会出现正数，见下文），其补码就是符号位 $0$ 接上其二进制；例如 $5$，就是 $0100_{(2)}$。
-
-而负数呢？
-
-先是一个符号位 $1$，随后是二进制逐位取反，最后在加 $1$。那么 $-5$ 的补码便是 $1011_{(2)}+1=1100_{(2)}$。
-
-可以发现，此时 `x&-x` 的确是 $100_{(2)}=2^2=4$。
-
-因为在 $\operatorname{lowbit}(x)$ 的后面全是 $0$，取反得到的全是 $1$，然后再加 $1$，因此 $\operatorname{lowbit}(x)$ 所在位仍然是 $1$，而前面按位取反，全部不一样。
-
-故 $\operatorname{lowbit}(x)$ 为 `x&-x`。
+<details class="note" open>
+    <summary>原理</summary>
+    <p>很简单。首先你要知道在计算机中，数字以<b>补码</b>的形式存储。</p>
+    <p>（此处的二进制数有效位数只有 $3$ 位，最高位为符号位）</p>
+    <p>那么对于正数（树状数组中 $\operatorname{lowbit}(x)$ 只会出现正数，见下文），其补码就是符号位 $0$ 接上其二进制；例如 $5$，就是 $0100_{(2)}$。</p>
+    <p>而负数呢？</p>
+    <p>先是一个符号位 $1$，随后是二进制逐位取反，最后在加 $1$。那么 $-5$ 的补码便是 $1011_{(2)}+1=1100_{(2)}$。</p>
+    <p>可以发现，此时 <code>x&-x</code> 的确是 $100_{(2)}=2^2=4$。</p>
+    <p>因为在 $\operatorname{lowbit}(x)$ 的后面全是 $0$，取反得到的全是 $1$，然后再加 $1$，因此 $\operatorname{lowbit}(x)$ 所在位仍然是 $1$，而前面按位取反，全部不一样。</p>
+    <p>故 $\operatorname{lowbit}(x)$ 为 <code>x&-x</code>。</p>
+</details>
 
 #### 参考代码
 
@@ -130,15 +128,13 @@ int query(int x){
 
 而 $t[x]$ 被 $t[x+\operatorname{lowbit}(x)]$ 包含。
 
-证明：
-
-令 $y=x+\operatorname{lowbit}(x)$，$x=p\times 2^{k+1}+2^k$，其中 $k$ 为**自然数**，$s$ 为**实数**。
-
-则 $y=(p+1)\times 2^{k+1},y-\operatorname{lowbit}(y)+1=p\times 2^{k+1}+1$。
-
-考虑到 $x-\operatorname{lowbit}(x)+1=p\times 2^k+1$，因此 $y-\operatorname{lowbit}(y)+1<x-\operatorname{lowbit}(x)+1$。
-
-又考虑到 $y$ 显然大于 $x$，因此 $t[x]$ 被 $t[x+\operatorname{lowbit}(x)]$ 包含。
+<details class="note" open>
+    <summary>证明</summary>
+    <p>令 $y=x+\operatorname{lowbit}(x),x=p\times 2^{k+1}+2^k$，其中 $k$ 为自然数，$p$ 为<b>实数</b>（也就是说，可以是小数）。</p>
+    <p>则 $y=(p+1)\times 2^{k+1},y-\operatorname{lowbit}(y)+1=p\times 2^{k+1}+1$。</p>
+    <p>考虑到 $x-\operatorname{lowbit}(x)+1=p\times 2^k+1$，因此 $y-\operatorname{lowbit}(y)+1$。</p>
+    又考虑到 $y>x$，故 $t[x]$ 被 $t[x+\operatorname{lowbit}(x)]$ 包含。
+</details>
 
 因此，我们仅仅需要令 $x\leftarrow x+\operatorname{lowbit}(x)$ 直到 $x>n$ 即可。
 
