--- a/_posts/2024-12-28-1.md
+++ b/_posts/2024-12-28-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "关于OI Wiki的&lt details&gt样式的复刻"
+title: "关于OI Wiki的&ltdetails&gt样式的复刻"
 subtitle: ""
 date: 2024-12-28
 author: "TH911"
@@ -53,6 +53,40 @@ words:
 
 不过需要注意的是，在 `<details>` 内部**不能使用 Markdown 语法**，如果需要类似于粗体、插入图片等 Markdown 能实现的功能，请使用 `html`。
 
+但是，实测发现 $\KaTeX$ 可以直接将源码写入 `<details>` 内。
+
+<details class="example" open>
+    <summary>$\KaTeX$ 测试样例</summary>
+    <p>行内公式：$1+2+3+\cdots+10=\sum\limits_{i=1}^10=\dfrac{(1+10)\times 10}{2}=55$。</p>
+    <p>多行公式：
+        $$
+        1+2+3+\cdots+10=\sum\limits_{i=1}^10=\dfrac{(1+10)\times 10}{2}=55
+        $$
+    </p>
+</details>
+<details class="info">
+    <summary>$\KaTeX$ 测试样例源码</summary>
+    <div class="language-html highlighter-rouge"><div class="highlight"><pre class="highlight"><code><div class="table-responsive"><table class="rouge-table table"><tbody><tr><td class="rouge-gutter gl"><pre class="lineno">1
+2
+3
+4
+5
+6
+7
+8
+9
+</pre></td><td class="rouge-code"><pre><span class="nt">&lt;details</span> <span class="na">class=</span><span class="s">"example"</span> <span class="na">open</span><span class="nt">&gt;</span>
+    <span class="nt">&lt;summary&gt;</span>$\KaTeX$ 测试样例<span class="nt">&lt;/summary&gt;</span>
+    <span class="nt">&lt;p&gt;</span>行内公式：$1+2+3+\cdots+10=\sum\limits_{i=1}^10=\dfrac{(1+10)\times 10}{2}=55$。<span class="nt">&lt;/p&gt;</span>
+    <span class="nt">&lt;p&gt;</span>多行公式：
+        $$
+        1+2+3+\cdots+10=\sum\limits_{i=1}^10=\dfrac{(1+10)\times 10}{2}=55
+        $$
+    <span class="nt">&lt;/p&gt;</span>
+<span class="nt">&lt;/details&gt;</span>
+</pre></td></tr></tbody></table></div></code></pre></div></div>
+</details>
+
 ***
 
 值得一提的是，可折叠框可以**默认打开**。
@@ -63,7 +97,7 @@ words:
 
 <details class="example" open>
     <summary>默认打开</summary>
-    
+
     <p>这是一个样例。</p>
 </details>
 
