--- a/_posts/2024-12-31-1.md
+++ b/_posts/2024-12-31-1.md
@@ -1,12 +1,13 @@
 ---
 layout: post
 title: "OI 优化技巧"
-subtitle: "快读快写,卡常,清空"
+subtitle: "快读快写,卡常,清空,mt19937"
 date: 2024-12-31
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
+  - 随机化
   - 时间戳优化
 words:
   - scanf()
@@ -25,6 +26,7 @@ words:
   - while()
   - if()
   - 位运算
+  - random
 ---
 
 # 快读快写
@@ -559,3 +561,24 @@ std::size_t fwrite(const void* buffer, std::size_t size, std::size_t count,std::
 #pragma GCC optimize(2)
 </span></pre></td></tr></tbody></table></div></code></pre></div></div>
 </details>
+## 随机化： `mt19937`
+
+生成随机数可以使用 `rand()`，然而自带的 `rand()` **效率较低且值域较小**。
+
+因此我们可以使用 `mt19937` 来生成随机数：
+
+```cpp
+mt19937 Rand(time(0));
+```
+
+这样，在需要随机数时使用 `Rand()` 即可（`time(0)` 是为了做种）。
+
+**注意：尽量包含头文件 `<random>`，否则 *可能* 报错**。
+
+<details class="info" open>
+    <summary><code>mt19937</code> 与头文件 <code>random</code></summary>
+    <p>在 Windows 下 Dev-C++5.11 内使用 C++14 编译运行，不带头文件 <code>random</code>可以正常编译运行。然而在 Linux 下或洛谷 IDE 下，则可能会报错。</p>
+    <p>因此建议加上头文件 <code>random</code> 或使用万能头文件 <code>bits/stdc++.h</code>。</p>
+    <p>否则可能就会 $\color{red}\text{CE}$。</p>
+</details>
+
