--- a/_posts/2024-11-20-1.md
+++ b/_posts/2024-11-20-1.md
@@ -147,10 +147,10 @@ $a_1,a_2,a_3,\cdots,a_{2n}$ 均已排序，且单调不降。
 
 对 $a$ 排序以后二分 $p$ 值直到 $p$ 不满足 $a[1,p],a[p+1,2n]$ 的定义即可。
 
-最终答案即（$p'$ 代表最后一个合法 $p$ 值）：
+最终答案即（$$p'$$ 代表最后一个合法 $p$ 值）：
 
 $$
-\large \max\left(\max\limits_{i=1}^{\left\lfloor\frac {p'}2\right\rfloor}(a_i+a_{p'-i+1}),\max\limits_{i=p'+1}^{\left\lfloor\frac {2n+p'}2\right\rfloor}(a_i+a_{2n-i+1}-m)\right)
+\Large \max\left(\max\limits_{i=1}^{\left\lfloor\frac {p'}2\right\rfloor}(a_i+a_{p'-i+1}),\max\limits_{i=p'+1}^{\left\lfloor\frac {2n+p'}2\right\rfloor}(a_i+a_{2n-i+1}-m)\right)
 $$
 
 ## AC 代码
