--- a/_posts/2024-12-31-1.md
+++ b/_posts/2024-12-31-1.md
@@ -27,6 +27,7 @@ words:
   - if()
   - 位运算
   - random
+  - lg[]
 ---
 
 # 快读快写
@@ -581,4 +582,53 @@ mt19937 Rand(time(0));
     <p>因此建议加上头文件 <code>random</code> 或使用万能头文件 <code>bits/stdc++.h</code>。</p>
     <p>否则可能就会 $\color{red}\text{CE}$。</p>
 </details>
+## 对数：`__lg` 与 `lg[i]` 预处理
+
+对于取以 $2$ 为底的对数的时候，我们可以使用 `<cmath>` 库中自带的 `log2` 函数来求解，例如 `log2(5)` 就是 $2.32193$。
+
+然而有些时候，我们仅仅需要整数部分，并不需要小数点后那么多位，因此我们考虑优化。
+
+1. 重写对数函数
+
+   很简单，复杂度也就是 $\mathcal O(\log n)$。
+
+   ```cpp
+   int lg(int n){
+   	int ans=0;
+   	while(n>>=1)ans++;
+   	return ans;
+   }
+   ```
+
+   但是，我们可以使用 GCC 提供的**非标准**函数 `__lg`。
+
+   比如 `__lg(16)` 就是 $4$，`__lg(15)` 就是 $3$。
+
+2. 数组预处理
+
+   主要是递推。
+
+   定义数组 $lg$，$lg[i]$ 表示 $\left\lfloor\log_2 i\right\rfloor$ 的值，也就是 $i$ 在二进制上**最高位的位权的对数**。
+
+   递推关系式：
+   
+   $$
+   lg[i]=lg\left[\dfrac{i}{2}\right]+1
+   $$
+   
+   递归边界：
+   
+   $$
+   lg[0]=0
+   $$
+   
+   也很简单，就是右移一位得到的数的位权对数加 $1$ 的结果。
+
+   代码：
+
+   ```cpp
+   for(int i=1;i<=N;i++)lg[i]=lg[i>>1]+1;
+   ```
+
+   
 
