update the button of code blocks
update the button to copy the code of each code blocks

--- a/_posts/2025-01-03-3.md
+++ b/_posts/2025-01-03-3.md
@@ -91,7 +91,8 @@ $\therefore$ 引理 $1$ 得证。
 考虑到 $A_Y=\dfrac12A_X+1+C_Y,B_Y=\dfrac12(B_X-C_Y)$，有：
 
 $$
-\frac{1}{2}A_Y+B_Y-1=\frac{\frac{1}{2}A_X+1+C_Y}{2}+\left[\frac{1}{2}(B_X-C_Y)\right]-1=\frac{1}{4}A_X+\frac{1}{2}B_X-\frac{1}{2}\tag{2}
+\frac{1}{2}A_Y+B_Y-1=\frac{\frac{1}{2}A_X+1+C_Y}{2}+\left[\frac{1}{2}(B_X-C_Y)\right]-1=\frac{1}{4}A_X+\frac{1}{2}B_X-\frac{1}{2}
+\tag{2}
 $$
 
 由 $(1),(2)$ 两式，得：$S_Y=\dfrac12A_Y+B_Y-1$。
