--- a/_posts/2024-11-09-2.md
+++ b/_posts/2024-11-09-2.md
@@ -15,7 +15,9 @@ words:
   - js
 ---
 
-[项目地址](/project/XPlayer/#0)
+[项目地址](https://github.com/TH911/XPlayer) [演示地址](/XPlayer)
+
+此文档已<span style="color:red;"><b>弃用</b></span>，请参考 [README.md](https://github.com/TH911/XPlayer/blob/main/README.md)。
 
 ### 简介
 
