--- a/_posts/2024-11-14-1.md
+++ b/_posts/2024-11-14-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "题解：字典树"
-subtitle: "洛谷P8306"
+subtitle: "洛谷P8306 | Trie树"
 date: 2024-11-14
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -11,8 +11,6 @@ tags:
   - 字典树
   - 普及/提高−
 words:
-  - Trie
-  - Trie树
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P8306)
@@ -173,6 +171,14 @@ int main(){
 
 ## 注意事项
 
+### 多测清空
+
 多测不清空，光速见祖宗。
 
 清空的时候，要么 `fill()`，不然就 `memset()` 部分。如果直接使用 `memset(a,0,sizeof(a))`，会 $\text{TLE}$。
+
+### 空间大小
+
+$26$ 倍。
+
+字典序的空间复杂度是 $\mathcal O(VL)$ 的，$V$ 表示字符集大小，$L$ 表示总输入字符串长度。
