--- a/_posts/2024-11-14-1.md
+++ b/_posts/2024-11-14-1.md
@@ -8,7 +8,7 @@ header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
   - 题解
-  - 字典树
+  - Trie树
   - 普及/提高−
 words:
 ---
@@ -23,7 +23,7 @@ words:
 
 ![](/img/2024/11/001.png)
 
-简单而言，就是将每一位字符都视作一个节点，那么便形成了如上的树。
+简单而言，就是将每一位字符都视作连接节点的两条边，那么便形成了如上的树。
 
 **这么做有什么好处呢？**
 
@@ -34,6 +34,14 @@ words:
 每一个节点如果其是某个模式串的最后一个节点，那么其权值为 $1$，否则为 $0$。
 
 ## 代码实现
+
+<details class="warning" open>
+    <summary>更新：$2025/1/19$</summary>
+
+    <p style="color:red;font-weight:bolder">
+        请不要使用 <code>unordered_map</code>，极其容易导致 $\text{MLE}$。
+    </p>
+</details>
 
 首先，存储每一个节点：
 
