--- a/_posts/2024-11-14-2.md
+++ b/_posts/2024-11-14-2.md
@@ -8,22 +8,21 @@ header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
   - 题解
-  - 字典树
+  - Trie树
   - 提高+/省选−
 words:
-  - Trie
-  - Trie树
+  - 字典树
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P3065)
 >
-> 如果你还不会字典树：[看这里](/2024/11/14/1/)
+> 如果你还不会 Trie树：[看这里](/2024/11/14/1/)
 
 ## 题意分析
 
 ### 策略
 
-看到字典序，很容易想到考虑使用字典树解决。
+看到字典序，很容易想到考虑使用 Trie 树解决。
 
 假设 $s$ 为更改字典序后可能的最小值，那么相当于钦定了 $s_i$ 小于其兄弟节点。（如图）
 
