--- a/_posts/2024-11-18-2.md
+++ b/_posts/2024-11-18-2.md
@@ -156,7 +156,7 @@ $$。
 
 那么，为什么要使 border 最长呢？
 
-其实也很简单，就是**让公共部分最长**，因为**这样能够让我们失配后进行下一次匹配时尽可能少的重复匹配已经匹配过的字符**。
+其实也很简单，就是**让公共部分最长**（向前跳的尽量少），因为**这样能够防止漏掉漏掉可能的匹配**。
 
 ### 求解 $pre$ 数组
 
