--- a/_posts/2024-11-19-4.md
+++ b/_posts/2024-11-19-4.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "高斯消元详解"
-subtitle: "例题：洛谷P3389,P2455 | 题解：[SDOI2006]线性方程组"
+subtitle: "例题：洛谷P3389,P2455"
 date: 2024-11-19
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -11,6 +11,10 @@ tags:
   - 提高+/省选−
   - 数学
   - 高斯消元
+words:
+  - 题解：[SDOI2006]线性方程组
+  - 题解：高斯消元
+  - 题解：【模板】高斯消元
 ---
 
 > 题目传送门：[【模板】高斯消元法](https://www.luogu.com.cn/problem/P3389)，[[SDOI2006]线性方程组](https://www.luogu.com.cn/problem/P2455)。
